<resources>
    <string name="app_name">LD01</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to LaunchActivity -->
    <string name="launch_text1">Automatically save to the web</string>
    <string name="launch_text2">\nNever lose your progress,so you can\n keep working any computer or\n device</string>
    <string name="title_main">Time Manager</string>
    <string name="title_second">Best To-Do List Manager</string>
    <string name="main_login">LOG IN</string>
    <string name="main_username">Name</string>
    <string name="main_password">Password</string>
    <string name="main_account">I have an account:</string>
    <string name="mainA_search">Search</string>
    <string name="mainA_settings">Settings</string>
    <string name="mainA_filter">Filter</string>
    <string name="mainA_title">Today</string>
    <string name="mainA_subtitle">APRIL 2015</string>
    <string name="newtaskA_check">check</string>
    <string name="task_detail_activity_edit">Edit</string>

    <!-- Strings related to ToolBar -->
    <string name="actions_edit">Edit</string>
    <string name="actions_check">Check</string>
    <string name="title_task_detail_activity">Wireframes for new dashboard in the Trader Tools app</string>
    <string name="content_task_detail_activity">We want to add a new dashboard to the trader tools app summarising upcoming fixtures in PMA,\n ruring ball events adn cricket fixtures</string>
    <string name="task_detail_activity_comments">Comments</string>
    <string name="task_detail_activity_leave_comments">Leave comments</string>
    <string name="sign_up_title_activity">SIGN UP</string>
    <string name="sign_in_title_activity">SIGN IN</string>
    <string name="main_ensure_password">Confirm Password</string>
    <string name="task_type_1">Closed Meeting</string>
    <string name="task_type_2">Travel</string>
    <string name="task_type_3">Call</string>
    <string name="task_type_4">Idea</string>
    <string name="icons">&#xe775;&#xe779;</string>
</resources>
