<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/title_background"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title_activity"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/username_signupA_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_username"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        />

    <EditText
        android:id="@+id/password_signinA_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_password"
        android:inputType="textPassword"
        android:ems="10"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        />


    <EditText
        android:id="@+id/repassword_signinA_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_ensure_password"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        />


        <!--<TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_account"
            android:textColor="@color/white"
            android:layout_weight="1"
            />-->


        <com.rey.material.widget.Button
            android:id="@+id/submit_signupA_btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:background="@drawable/btn_signin"
            android:text="Submit"
            />
        <!--<Button
            android:id="@+id/signup_signupA_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_signin"
            />-->



</LinearLayout>
