<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kk.ld01.activities.SignInActivity"
    android:orientation="vertical"
    android:background="@drawable/title_background"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_login"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/username_signinA_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_username"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        />

    <EditText
        android:id="@+id/password_signinA_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        />

        <com.rey.material.widget.Button
            android:id="@+id/signin_signinA_btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:background="@drawable/btn_signin"
            android:text="Log IN"
            />



</LinearLayout>
